Minor changes in GNATprove model report
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/model/GNATprove-MERCE/doc/GNATprove-model-report.tex
+++ b/model/GNATprove-MERCE/doc/GNATprove-model-report.tex
@@ -70,7 +70,7 @@ email: \url{d.mentre@fr.merce.mee.com}
 \mainmatter
 
 \chapter{Introduction}
- define
+
 This document presents the use of Ada 2012 language and GNATprove tool
 to model a subset of ETCS. This subset is included in the subset
 defined in openETCS D2.5 document\cite{openetcs:D2.5}.
@@ -172,7 +172,11 @@ a \Ada{Boolean} variable, e.g. \Ada{Start_Of_Mission}.
 
 \chapter{Model benefits and shortcomings}
 
+FIXME
+
 \chapter{Detailed model description}
+
+FIXME
 
 \section{Generic parts of the model}
 
@@ -232,3 +236,4 @@ a \Ada{Boolean} variable, e.g. \Ada{Start_Of_Mission}.
 \end{document}
 
 % LocalWords:  GNATprove AdaCore's GPS VC pre adb GPL SMT Satisfiability ETCS
+% LocalWords:  FIXME
