rt-tester description added

--- a/model/EA-SysML/doc/descriptionReport.tex
+++ b/model/EA-SysML/doc/descriptionReport.tex
@@ -25,7 +25,7 @@
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
 
-\title{Radio Communication Managment \\
+\title{Radio Communication Management \\
     {\it ERTMS Subset-026-3.5}}
 
 \author{C{\'e}cile Braunstein\\University of Bremen\\
@@ -54,12 +54,12 @@ package.
 \section{Model description}
 \label{sec:modeldescription}
 The radio communication management module (MoRC) is the user application interacting
-with Euroradio protocol. In the following model only the general behaviour is
+with Euroradio protocol. In the following model only the general behaviors is
 presented, the actual details of how messages are transported are not relevant
 for this description.
 \input{modelDescription}
 % ----------------------------------------------------
-\section{Requirements Modelling}
+\section{Requirements Modeling}
 \label{sec:requirements}
 The model describes in section \ref{sec:modeldescription} is a direct
 translation of the SUBSET026-chap 3.5. This section describes how the model is
