--- a/model/EA-SysML/doc/model.bib
+++ b/model/EA-SysML/doc/model.bib
@@ -43,18 +43,7 @@ url = {http://www.omg.org/spec/OCL/2.3.1/PDF},
 volume = {03},
 year = {2012}
 }
-@article{Peleska2011,
-author = {Peleska, Jan and Vorobev, Elena and Lapschies, Florian},
-file = {:home/cecile/biblio/Peleska, Vorobev, Lapschies - 2011 - Automated test case generation with SMT-solving and abstract interpretation.pdf:pdf},
-journal = {NASA Formal Methods},
-keywords = {D3.1},
-mendeley-tags = {D3.1},
-number = {1},
-pages = {298--312},
-title = {{Automated test case generation with SMT-solving and abstract interpretation}},
-url = {http://www.springerlink.com/index/CHK5807226826652.pdf},
-year = {2011}
-}
+
 @techreport{rttmbtreport2011,
 author = {Peleska, Jan and Vorobev, Elena and Lapschies, Florian and Zahlten, Cornelia},
 howpublished =
@@ -84,3 +73,44 @@ abstract={A unified approach to program verification is suggested, which applies
 keywords={Clocks;Logic;Operating systems;Power system modeling;Programming profession;Real time systems;Reasoning about programs;Safety;Stress;System recovery},
 doi={10.1109/SFCS.1977.32},
 ISSN={0272-5428},}
+
+@misc{verified_website,
+	title = {Verified  :: Products},
+	url = {http://www.verified.de/en/products},
+	urldate = {2013-04-04},
+	keywords = {model-based testing, Tool},
+	howpublished = {http://www.verified.de/en/products},
+	file = {Verified Systems International GmbH ::
+	Products:/home/cecile/.mozilla/firefox/hzvu1rr0.default/zotero/storage/Q4GK8632/products.html:text/html},
+	author = {{Verified Systems International {GmbH}}}
+}
+@incollection{brauer_efficient_2012,
+year={2012},
+isbn={978-3-642-34690-3},
+booktitle={Testing Software and Systems},
+volume={7641},
+series={Lecture Notes in Computer Science},
+editor={Nielsen, Brian and Weise, Carsten},
+doi={10.1007/978-3-642-34691-0_3},
+title={Efficient and Trustworthy Tool Qualification for Model-Based Testing Tools},
+url={http://dx.doi.org/10.1007/978-3-642-34691-0_3},
+publisher={Springer Berlin Heidelberg},
+author={Brauer, Jörg and Peleska, Jan and Schulze, Uwe},
+pages={8-23}
+}
+
+
+@incollection{Peleska2011,
+year={2011},
+isbn={978-3-642-20397-8},
+booktitle={NASA Formal Methods},
+volume={6617},
+series={Lecture Notes in Computer Science},
+editor={Bobaru, Mihaela and Havelund, Klaus and Holzmann, GerardJ. and Joshi, Rajeev},
+doi={10.1007/978-3-642-20398-5_22},
+title={Automated Test Case Generation with SMT-Solving and Abstract Interpretation},
+url={http://dx.doi.org/10.1007/978-3-642-20398-5_22},
+publisher={Springer Berlin Heidelberg},
+author={Peleska, Jan and Vorobev, Elena and Lapschies, Florian},
+pages={298-312}
+}
