Fix minor typos in bibliography
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/model/GNATprove-MERCE/doc/GNATprove-model-report.bib
+++ b/model/GNATprove-MERCE/doc/GNATprove-model-report.bib
@@ -1,6 +1,6 @@
 @TechReport{openetcs:D2.5,
-  author =       {David Mentré and Stanislas Pinte and Guillaume Pottier and WP2 participants},
-  title =        {Methods and tools benchmarking methodology},
+  author =       {David Mentré and Stanislas Pinte and Guillaume Pottier and {WP2 participants}},
+  title =        {D2.5 Methods and tools benchmarking methodology},
   institution =  {openETCS},
   year =         {2013},
   OPTkey =       {},
